assets/css/style.css
/* css */
@import url(variable.css);
@import url(bootstrap.css);

/* *************** Global
 ******************************* */
body {
    margin: 0;
    line-height: 1.4;
    font-family: Montserrat, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    position: relative;
    top: -22px;
}

.button {
    font-size: 16px;
    line-height: 21px;
    padding: 11px 16px;
    min-height: 45px;
    background-color: #33c5c5;
    width: 311px;
    font-family: var(--self-font-family);
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    text-align: center;
    font-weight: var(--semi-bold);
    color: var(--primary-text);
    border-radius: var(--corner-radius-small);
    border: 1px solid transparent;
    text-decoration: none;
    display: inline-flex;
}

.button-light {
    font-size: 16px;
    line-height: 21px;
    padding: 11px 16px;
    min-height: 45px;
    background: var(--white);
    border: 1px solid #c5c5c5;
    font-family: var(--self-font-family);
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    text-align: center;
    font-weight: var(--semi-bold);
    color: var(--primary-text);
    border-radius: var(--corner-radius-small);
    text-decoration: none;
    display: inline-flex;
}

/* .button:hover{
    font-size: 16px;
    line-height: 21px;
    padding: 11px 16px;
    min-height: 45px;
    background-color: #fcae03;
    width: 311px;
} */
/* *************** Hero Section
 ******************************* */

.hero {
    position: relative;
    overflow: hidden;
    /* display: flex;
    flex-direction: column;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: end;
    justify-content: flex-end; */
    width: 100%;
    color: rgb(255, 255, 255);
    height: 655px;
    border-radius: 0px 0px 24px 24px;
    height: 685px;
}

/* @media (min-width: 577px){
} */
.header-image {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    top: 0px;
}

.header-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: 50% 10%;
}

/* ========= Navbar ========= */
.header-navbar {
    display: flex;
    -webkit-box-pack: center;
    justify-content: space-between;
    -webkit-box-align: center;
    align-items: center;
    color: rgb(255, 255, 255);
    top: 0px;
    height: 66px;
    z-index: 1001;
    font: var(--footnote-semi-bold);
    position: fixed;
    left: 0px;
    right: 0px;
    background-color: transparent;
}

.header-navbar.fixed {
    background-color: #00ADEE !important;
    z-index: 5;
}

.header-navbar ul.nav-list li {
    float: left;
    list-style: none;
}

.header-navbar ul li a,
.header-navbar .login,
.drop-list {
    padding: 7px 8px;
    border-radius: 8px;
    cursor: pointer;
    color: #ffffff;
}

.header-navbar ul li a:hover,
.header-navbar .login:hover,
.drop-list:hover {
    background-color: #ffffff;
    color: rgb(0, 173, 238);
}

.header-navbar ul li .drop-list img {
    filter: brightness(0) invert(1);
    vertical-align: middle;
}

.drop-list {
    border-radius: 8px 8px 0 0 !important;
    position: relative;
}

.header-navbar button {
    font-size: 13px;
    line-height: 18px;
    padding: 6px 16px;
    min-height: 32px;
    background-color: #33c5c5;
    cursor: pointer;
    font-family: var(--self-font-family);
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    text-align: center;
    font-weight: var(--semi-bold);
    color: var(--primary-text);
    border-radius: var(--corner-radius-small);
    border: 1px solid transparent;
    text-decoration: none;
    display: inline-flex;
}

ul.sub-list {
    display: none;
    position: absolute;
    flex-direction: column;
    background-color: #fff;
    padding: 5px 0;
    min-width: 248px;
    border-radius: 0 8px 8px 8px;
    box-shadow: 6px 6px 6px 0 rgb(0 0 0 / 18%), -6px 6px 6px 0 rgb(0 0 0 / 18%);
}

ul.sub-list li {
    height: 30px;
}

ul.sub-list li a {
    text-decoration: none;
    padding: 3px 20px;
    line-height: 2;
    text-transform: none;
    color: var(--black);
    font-weight: 600;
}

.header-navbar ul.nav-list .drop-list:hover ul.sub-list {
    display: flex !important;
}

@media (max-width: 770px) {
    .header-navbar {
        background-color: #00ADEE !important;
    }

    .header-navbar button,
    .header-navbar .nav-list {
        display: none;
    }
}

/* ========= Mobile Navbar ========= */
.mobile-nav {
    height: calc(100vh - 66px);
    position: fixed;
    top: 66px;
    z-index: 5;
    width: 100%;
    background-color: #fff;
}

.mobile-nav .list .list-item {
    display: flex;
    align-items: center;
    align-items: center;
    padding: 0 16px;
    border-bottom: 1px solid rgba(204, 204, 204, .42);
    text-decoration: none;
    color: inherit;
    height: 70px;
    font-size: 16px;
    font-weight: 700;
    cursor: pointer;
}

.mobile-nav .list {
    color: var(--black);
    font-weight: 600;
    font-size: 16px;
    display: flex;
    flex-direction: column;
}

.mobile-nav .list .list-item .img {
    padding-right: 12px;
    width: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* ========= Main Section ========= */
.main .content input {
    border: 1px solid transparent;
    border-radius: 24px;
    box-sizing: border-box;
    font-size: 16px;
    height: 48px;
    margin-bottom: 16px;
    text-indent: 16px;
    appearance: none;
    box-shadow: rgb(133 127 120 / 24%) 0px 8px 24px;
    outline: transparent solid 1px;
    color: rgb(50, 50, 50);
    line-height: 18px;
    height: 48px;
    margin-left: 0px;
    margin-right: 0px;
    border-radius: 12px;
    width: 386px;
    margin: 0;
}
/* ... */

